Add l5-swagger annotations for Imports:Get
